# nova_ai

./: .env.example  .gitignore  .gitmodules  README.md  patch_pocket-tts_submodule.sh  pyproject.toml
nova/archive/frontend/: nova-dashboard.html
nova/backend/: main.py  main_pipeline.py
nova/backend/kws/: generate_synthetic_data.py  kws_engine.py  kws_engine_v2.py  micro_kws.py  train_micro_nova.py  train_micro_nova.yaml
nova/backend/kws/micro_training_data/trained_models/nova/: best_weights.weights.h5  training_config.yaml
nova/backend/kws/models/: micro_nova.tflite
nova/backend/pipeline/: base_handler.py  llm_handler.py  stt_handler.py  thread_manager.py  tts_handler.py  vad_handler.py
nova/backend/pipeline_mp/: __init__.py  kws_worker.py  llm_config.py  llm_worker.py  stt_config.py  stt_moonshine_worker.py  stt_worker.py  tts_worker.py
nova/backend/voices/: SETUP.md
nova/frontend/: index.html  nova-dashboard.html  pcm-worklet.js
