[project]
name = "nova-ai"
version = "0.1.0"
description = "Nova AI: Real-time conversational intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "faster-whisper>=1.0.0",
    "transformers<5.0.0",
    "bitsandbytes",
    "accelerate",
    "pynvml",
    "psutil",
    "jiwer",
    "soundfile",
    "scipy",
    "python-multipart",
    "pocket-tts",
    "pydub",
    "onnxruntime-gpu",
    "pyaudio",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "coloredlogs",
    "flatbuffers",
    "protobuf",
    "nvidia-ml-py",
]

[tool.uv]
override-dependencies = [
    "onnxruntime==1.25.0.dev20260224001",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "ort-nightly"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/"
explicit = true

[tool.uv.sources]
pocket-tts = { path = "pocket-tts" }
onnxruntime = { index = "ort-nightly" }
onnxruntime-gpu = { index = "ort-nightly" }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
