[project]
name = "nova-ai"
version = "0.1.0"
description = "Nova AI: Real-time conversational intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "faster-whisper",
    "qwen-agent",
    "bitsandbytes",
    "accelerate",
    "pynvml",
    "psutil",
    "jiwer",
    "soundfile",
    "scipy",
    "python-multipart",
    "pocket-tts",
    "pydub",
    "onnxruntime-gpu",
    "pyaudio",
    "torch",
    "torchvision",
    "torchaudio",
    "torchcodec",
    "coloredlogs",
    "flatbuffers",
    "protobuf",
    "nvidia-ml-py",
    "speechbrain==1.0.2", # 1.0.3
    "deepface>=0.0.99",
    "opencv-python>=4.13.0.92",
    "cryptography>=46.0.5",
    "python-jose>=3.5.0",
    #"huggingface-hub==0.23.4", # 0.36.2
    "tf-keras>=2.20.1",
    "openai>=2.24.0",
    "ddgs[api]>=9.11.3",
    "datasets[audio]>=4.7.0",
    "transformers",
    "moonshine-voice>=0.0.49",
    "setproctitle>=1.3.7",
    "fastrtc[stt,tts,vad]>=0.0.34",
    "faster-qwen3-tts>=0.2.4",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "ort-nightly"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/"
explicit = true

[tool.uv.sources]
pocket-tts = { path = "pocket-tts" }
onnxruntime = { index = "ort-nightly" }
onnxruntime-gpu = { index = "ort-nightly" }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
torchcodec = { index = "pytorch-cu130" }

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest>=8.0",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = [
    "nova/backend",
    "nova/backend/nova-l7/L-7",
    "nova/backend/nova-l7/L-3",
    "nova/backend/kws",
    "nova/backend/pipeline_mp",
]
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not e2e'"
markers = [
    "e2e: end-to-end tests that load real models (deselected by default)",
]
